# RunningMachine

./: .dockerignore  .gitignore  Dockerfile  README.md  ai-marathon-training-blueprint.md  docker-compose.yml  pyproject.toml
scheduler/: config.py  nightly.py
src/garmin_client/: __init__.py  auth.py  client.py  exceptions.py  metrics_mapper.py
src/science_engine/: __init__.py  engine.py  registry.py
src/science_engine/conflict_resolution/: __init__.py  resolver.py  strategies.py
src/science_engine/math/: __init__.py  ceiling.py  critical_speed.py  periodization.py  (+4 more)
streamlit_app/: app.py  helpers.py
tests/: conftest.py  test_audit_fixes.py  test_conflict_resolution.py  test_engine.py  test_integration.py  test_registry.py
tests/test_garmin_client/: conftest.py  test_auth.py  test_client.py  test_metrics_mapper.py
tests/test_math/: test_ceiling.py  test_ceiling_rpcs.py  test_critical_speed.py  test_periodization.py  test_periodization_arbitrary.py  test_race_pace_confidence.py  test_training_load.py  test_weather.py  test_zones.py
tests/test_models/: __init__.py  test_race_calendar.py  test_structured_workout.py
tests/test_rules/: test_adaptation_demand.py  test_adaptive_stimulus.py  test_asymmetric_readiness.py  test_body_battery.py  test_hrv_readiness.py  test_injury_risk_acwr.py  test_marathon_pace_volume.py  test_marathon_pace_volume_rpcs.py  test_minimum_key_session.py  test_periodization_rule.py  test_progressive_overload.py  test_race_proximity.py  test_sleep_quality.py  test_training_debt.py  test_workout_type_selector.py
tests/test_serialization/: test_garmin.py
tests/test_workout_builder/: test_builder.py  test_coaching_cues.py  test_description_builder.py  test_fueling.py  test_session_templates.py  test_target_assigner.py
(+43 files in other folders)
