[build-system]
requires = ["setuptools>=42.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-endurance-science-engine"
version = "0.1.0"
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.21",
    "scipy>=1.7",
    "pandas>=1.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]
ui = [
    "streamlit>=1.28",
]
garmin = [
    "garminconnect>=0.2.15",
]
scheduler = [
    "apscheduler>=3.10",
]
all = [
    "ai-endurance-science-engine[ui,garmin,scheduler]",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]
